deploy/kl-demo-service-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ezlab-load-balancing-demo
  labels:
    name: ezlab-load-balancing-demo
