deploy/kl-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kldemo-customers-web-deployment
  namespace: ezlab-load-balancing-demo
  labels:
    app: kldemo
spec:
  selector:
    matchLabels:
      app: kldemo-customers-web
  replicas: 2
  template:
    metadata:
      labels:
        app: kldemo-customers-web
    spec:
      containers:
        - name: kldemo-customers-web
          image: registry.ezlab.ru/ezlab/kubernetesloadbalancing:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: registry-credentials
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kldemo-nginx-deployment
  namespace: ezlab-load-balancing-demo
  labels:
    app: kldemo
spec:
  selector:
    matchLabels:
      app: kldemo-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: kldemo-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/proxy.conf
              subPath: proxy.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: proxy.conf
                path: proxy.conf
