deploy/kl-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kldemo-nginx
  namespace: ezlab-load-balancing-demo
  labels:
    app: kldemo
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: kldemo-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: kldemo-customers-web
  namespace: ezlab-load-balancing-demo
  labels:
    app: kldemo
spec:
  type: ClusterIP
  selector:
    app: kldemo-customers-web
  ports:
    - port: 8080
